# AutoCommit

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  run.sh
.github/workflows/: pylint.yml
app/: codecommit.py  commit-guildline.md
src/: __init__.py  autocommit.py  commit-guildline.md  commit-message-guidelines.md  utils.py
