[tool.poetry]
name = "autocommit"
version = "0.1.0"
description = ""
authors = ["pavan kumar"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "src", from = "." }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
click = "^8.1.5"
openai = "^0.27.8"
python-dotenv = "^1.0.0"
langchain = "^0.0.235"
unstructured = "^0.8.1"
rich = "^13.4.2"

[tool.poetry.group.dev.dependencies]
yapf = "^0.40.1"
flake8 = "^6.0.0"
pyinstaller = "^5.13.0"
poethepoet = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
package = "poetry run pyinstaller src/autocommit.py --collect-submodules src --onefile --name autocommit"
clean =  """
# Multiline commands including comments work too. Unescaped whitespace is ignored.
rm -rf .coverage
       .cache
       .mypy_cache
       .pytest_cache
       ./**/__pycache__
       ./**/*.pyc
       ./**/*.pyo
       ./**/notebooks/.ipynb_checkpoints
       cov_html
       build
       dist
"""