[tool.poetry]
name = "autocommit"
version = "0.2.1"
description = ""
authors = ["pavan kumar kandapagari <785pavan@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "src", from = "." }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
click = "^8.1.5"
openai = "^0.27.8"
python-dotenv = "^1.0.0"
langchain = "^0.0.235"
unstructured = "^0.8.1"
rich = "^13.4.2"

[tool.poetry.group.dev.dependencies]
yapf = "^0.40.1"
flake8 = "^6.0.0"
pyinstaller = "^5.13.0"
poethepoet = "^0.21.1"
pre-commit = "^3.3.3"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poe.tasks]
package = "poetry run pyinstaller src/autocommit.py --collect-submodules . --onefile --name autocommit"
clean = """
# Multiline commands including comments work too. Unescaped whitespace is ignored.
rm -rf .coverage
       .cache
       .mypy_cache
       .pytest_cache
       ./**/__pycache__
       ./**/*.pyc
       ./**/*.pyo
       ./**/notebooks/.ipynb_checkpoints
       ./**/*.spec
       cov_html
       build
       dist
"""
