[tool.poetry]
name = "autocommit"
version = "0.2.2"
description = ""
authors = ["pavan kumar kandapagari <785pavan@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "src", from = "." }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
click = "^8"
langchain-community = "^0"
markdown = "^3"
openai = {extras = ["all"], version = "^1"}
python-dotenv = "^1"
rich = "^13"
unstructured = "^0"
langchain-openai = "^0.0.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^7"
poethepoet = "^0"
pre-commit = "^3"
pyinstaller = "^6"
setuptools = "^69"
setuptools-scm = "^8"
yapf = "^0"

[tool.poetry-dynamic-versioning]
enable = true
style = "semver"
vcs = "git"

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = [
       "A",
       "B",
       "C",
       "D",
       "E",
       "F",
       "G",
       "I",
       "N",
       "Q",
       "S",
       "T",
       "W",
       "ANN",
       "ARG",
       "BLE",
       "COM",
       "DJ",
       "DTZ",
       "EM",
       "ERA",
       "EXE",
       "FBT",
       "ICN",
       "INP",
       "ISC",
       "NPY",
       "PD",
       "PGH",
       "PIE",
       "PL",
       "PT",
       "PTH",
       "PYI",
       "RET",
       "RSE",
       "RUF",
       "SIM",
       "SLF",
       "TCH",
       "TID",
       "TRY",
       "UP",
       "YTT",
]
unfixable = []
# Exclude a variety of commonly ignored directories.
exclude = [
       ".bzr",
       ".direnv",
       ".eggs",
       ".git",
       ".git-rewrite",
       ".hg",
       ".mypy_cache",
       ".nox",
       ".pants.d",
       ".pytype",
       ".ruff_cache",
       ".svn",
       ".tox",
       ".venv",
       "__pypackages__",
       "_build",
       "buck-out",
       "build",
       "dist",
       "node_modules",
       "venv",
]
# Same as Black.
line-length = 99
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
# Assume Python 3.11
target-version = "py311"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[build-system]
build-backend = "poetry_dynamic_versioning.backend"
requires = ["poetry-core", "poetry-dynamic-versioning"]

[tool.poe.tasks]
package = "poetry run pyinstaller src/autocommit.py --collect-submodules . --onefile --name autocommit"
clean = """
# Multiline commands including comments work too. Unescaped whitespace is ignored.
rm -rf .coverage
       .cache
       .mypy_cache
       .ruff_cache
       .pytest_cache
       ./**/__pycache__
       ./**/*.pyc
       ./**/*.pyo
       ./**/notebooks/.ipynb_checkpoints
       ./**/*.spec
       cov_html
       build
       dist
"""
lint = "pre-commit run --all-files"

[tool.setuptools_scm]
